# multimodal-rag-ingest

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  pyproject.toml
eval/: questions.json
scripts/: benchmark_api.py  smoke_test.py
sources/: rss_feeds.txt  youtube_urls.txt
src/: cli.py  config.py
src/api/: app.py  service.py
src/eval/: metrics.py  run_eval.py
src/index/: bm25.py  build_index.py  chunk.py  embed.py  faiss_store.py
src/ingest/: arxiv.py  normalize.py  rss.py  youtube.py
src/rag/: answer.py  citations.py  prompt.py  retrieve.py
tests/: load_test_locust.py  test_api_app.py  test_bm25_tokenize.py  test_build_index_failures.py  test_chunking.py  test_citation_url_formatting.py  test_citations.py  test_embed_retry_helpers.py  test_embedding_cache.py  test_eval_metrics.py  test_hybrid_mode_fallback.py  test_index_artifacts.py  test_rrf_fusion.py  test_run_eval_modes.py  test_schema.py  test_top_citation_policy.py  test_youtube_ingest.py
